# Pentominoes_KUKA

./: .gitignore  README.md  detectPiece.cpp  frameDetection.cpp  imgRec.cpp  imgRec2.cpp  imgRec4.cpp  imgRec_v3  imgRec_v3.cpp  imgRec_v3_copy.cpp  piecesCenter.cpp  piecesPosition.cpp  piecesPosition2.cpp  run.sh
Test_images_and_algorithms/: detectPiece.cpp  frameDetection.cpp  imgRec  (+6 more)
kuka_pentomino/src/ec2_bringup/: CMakeLists.txt  package.xml
kuka_pentomino/src/ec2_bringup/config/: miiwa.world  miiwa_control.yaml
kuka_pentomino/src/ec2_bringup/description/cameras/: mako_3d.gazebo.xacro  mako_3d.urdf.xacro  manta.gazebo.xacro  manta.urdf.xacro
kuka_pentomino/src/ec2_bringup/description/lbr_iiwa/: lbr_iiwa.gazebo.xacro  lbr_iiwa.transmission.xacro  lbr_iiwa.xacro  utilities.xacro
kuka_pentomino/src/ec2_bringup/description/miiwa/: gazebo.urdf.xacro  gripper_camera_connector.urdf.xacro  miiwa.urdf.xacro  miiwa_base.gazebo.xacro  miiwa_base.transmission.xacro  miiwa_base.urdf.xacro  pan_tilt_connector.urdf.xacro  pan_tilt_mast.urdf.xacro
kuka_pentomino/src/ec2_bringup/description/models/DLR_workbench/: model.config  workbench-1.4.sdf  workbench-1.4.sdf.xacro
kuka_pentomino/src/ec2_bringup/description/models/DLR_workbench/meshes/: workbench.stl
kuka_pentomino/src/ec2_bringup/description/models/pentomino-models/: model.xacro
kuka_pentomino/src/ec2_bringup/description/models/pentomino-models/pentomino_F/: F.xacro  model.config  model.sdf
kuka_pentomino/src/ec2_bringup/description/models/pentomino-models/pentomino_I/: I.xacro  model.config  model.sdf
kuka_pentomino/src/ec2_bringup/description/models/pentomino-models/pentomino_L/: L.xacro  model.config  model.sdf
kuka_pentomino/src/ec2_bringup/description/models/pentomino-models/pentomino_N/: N.xacro  model.config  model.sdf
kuka_pentomino/src/ec2_bringup/description/models/pentomino-models/pentomino_P/: P.xacro  model.config  model.sdf
kuka_pentomino/src/ec2_bringup/description/models/pentomino-models/pentomino_T/: T.xacro  model.config  model.sdf
kuka_pentomino/src/ec2_bringup/description/models/pentomino-models/pentomino_U/: U.xacro  model.config  model.sdf
kuka_pentomino/src/ec2_bringup/description/models/pentomino-models/pentomino_V/: V.xacro  model.config  model.sdf
kuka_pentomino/src/ec2_bringup/description/models/pentomino-models/pentomino_W/: W.xacro  model.config  model.sdf
kuka_pentomino/src/ec2_bringup/description/models/pentomino-models/pentomino_X/: X.xacro  model.config  model.sdf
kuka_pentomino/src/ec2_bringup/description/models/pentomino-models/pentomino_Y/: Y.xacro  model.config  model.sdf
kuka_pentomino/src/ec2_bringup/description/models/pentomino-models/pentomino_Z/: Z.xacro  model.config  model.sdf
kuka_pentomino/src/ec2_bringup/description/models/pentomino-models/pentomino_fixture/: model.config  model.sdf  model.sdf.xacro
kuka_pentomino/src/ec2_bringup/description/schunk/: schunk_adapter.gazebo.xacro  schunk_adapter.urdf.xacro  schunk_pw70.gazebo.xacro  schunk_pw70.transmission.xacro  schunk_pw70_usd.urdf.xacro  schunk_wsg50.gazebo.xacro  schunk_wsg50.transmission.xacro  schunk_wsg50.urdf.xacro
kuka_pentomino/src/ec2_bringup/description/worlds/: euroc-freestyle-izwlyt-1.world  euroc-freestyle-vfxunp-1.world  euroc-freestyle-vfxunp-2.world  euroc-freestyle.world  euroc-freestyle.world.xacro
kuka_pentomino/src/ec2_bringup/launch/: inverseKinematicService.launch  miiwa.launch  miiwa.simulation.launch  skills.launch
kuka_pentomino/src/ec2_bringup/meshes/cameras/collision/mako_3d_link/: case.stl  lens.stl
kuka_pentomino/src/ec2_bringup/meshes/cameras/collision/manta_hull/: lens.stl
kuka_pentomino/src/ec2_bringup/meshes/cameras/visual/mako_3d_link/: back.stl  bottom.stl  cover.stl  ethernet.stl  front.stl  lens.stl  power.stl
kuka_pentomino/src/ec2_bringup/meshes/cameras/visual/manta_hull/: manta_hull_1.stl  manta_hull_10.stl  manta_hull_11.stl  manta_hull_12.stl  manta_hull_13.stl  manta_hull_14.stl  manta_hull_15.stl  manta_hull_16.stl  manta_hull_17.stl  manta_hull_18.stl  manta_hull_19.stl  manta_hull_2.stl  manta_hull_20.stl  manta_hull_3.stl  manta_hull_4.stl  manta_hull_5.stl  manta_hull_6.stl  manta_hull_7.stl  manta_hull_8.stl  manta_hull_9.stl
kuka_pentomino/src/ec2_bringup/meshes/schunk/schunk_wsg50_base/: schung_wsg50_base.stl
kuka_pentomino/src/ec2_bringup/meshes/schunk/schunk_wsg50_jaw/: finger.stl  gripper_1_noFinger.stl  gripper_2_noFinger.stl  jaw.blend  schunk_wsg50_jaw_1.stl  schunk_wsg50_jaw_2.stl  schunk_wsg50_jaw_3.stl
kuka_pentomino/src/ec2_interface/: CMakeLists.txt  package.xml
kuka_pentomino/src/ec2_interface/include/ec2_interface/: arm_interface.h  camera_interface.h  ec2_interface.h  gripper_interface.h  pan_tilt_interface.h  platform_interface.h  state_interface.h
kuka_pentomino/src/ec2_interface/src/: arm_interface.cpp  camera_interface.cpp  ec2_interface.cpp  gripper_interface.cpp  pan_tilt_interface.cpp  platform_interface.cpp  state_interface.cpp
kuka_pentomino/src/ec2_msgs/ec2_skills_msgs/: CMakeLists.txt  package.xml
kuka_pentomino/src/ec2_msgs/ec2_skills_msgs/srv/: FlipP5.srv  MoveArm.srv  MovePT.srv  MovePlatform.srv  PickBlanks.srv  PickObject.srv  PlaceBlanks.srv  PlaceObject.srv  PushObject.srv
kuka_pentomino/src/ec2_sim/: CMakeLists.txt  package.xml
kuka_pentomino/src/ec2_sim/scripts/: kdl_parser.py  kmriiwa_simulated.py  kmriiwa_wrapper.py  schunk_pw70_simulated.py  schunk_pw70_wrapper.py  schunk_wsg50_simulated.py  schunk_wsg50_wrapper.py  simulation_wrapper.py
kuka_pentomino/src/ec2_sim/scripts/saved/: kmriiwa_simulated.py  kmriiwa_wrapper.py
kuka_pentomino/src/ec2_sim/scripts/urdf_parser_py/: urdf.py
kuka_pentomino/src/ec2_sim/scripts/urdf_parser_py/xml_reflection/: core.py
kuka_pentomino/src/ec2_sim/src/: InverseKinematicService.cpp
kuka_pentomino/src/ec2_solvers/: CMakeLists.txt  package.xml
kuka_pentomino/src/ec2_solvers/include/ec2_solvers/: pieceDetection.h  puzzle.h  solver.h  solver_v2.h
kuka_pentomino/src/ec2_solvers/src/: pieceDetection.cpp  puzzle.cpp  solver.cpp  solver_v2.cpp
(+126 files in other folders)
