<?xml version="1.0"?>
<package>
    <name>ec2_interface</name>
    <version>1.0.0</version>
    <description>Provides an interface with the KUKA platform.</description>

    <maintainer email="efp@ua.pt">Eurico Pedrosa</maintainer>
    <license>BSD</license>

    <buildtool_depend>catkin</buildtool_depend>

    <build_depend>tf</build_depend>
    <build_depend>std_msgs</build_depend>
    <build_depend>roscpp</build_depend>
    <build_depend>cv_bridge</build_depend>
    <build_depend>sensor_msgs</build_depend>
    <build_depend>config_msgs</build_depend>
    <build_depend>gripper_msgs</build_depend>
    <build_depend>pantilt_msgs</build_depend>
    <build_depend>cmake_modules</build_depend>
    <build_depend>euroc_ros_msgs</build_depend>
    <build_depend>image_geometry</build_depend>
    <build_depend>message_filters</build_depend>
    <build_depend>tf_conversions</build_depend>

    <build_depend>eigen</build_depend>

    <run_depend>tf</run_depend>
    <run_depend>std_msgs</run_depend>
    <run_depend>roscpp</run_depend>
    <run_depend>cv_bridge</run_depend>
    <run_depend>sensor_msgs</run_depend>
    <run_depend>config_msgs</run_depend>
    <run_depend>gripper_msgs</run_depend>
    <run_depend>pantilt_msgs</run_depend>
    <run_depend>cmake_modules</run_depend>
    <run_depend>euroc_ros_msgs</run_depend>
    <run_depend>image_geometry</run_depend>
    <run_depend>message_filters</run_depend>
    <run_depend>tf_conversions</run_depend>

    <export>
    </export>
</package>
