<?xml version="1.0"?>
<package>
  <name>ec2_skills_msgs</name>
  <version>0.0.0</version>
  <description>The communication with a skill is made through messages.</description>

  <maintainer email="efp@ua.pt">Eurico Pedrosa</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>std_msgs</build_depend>
  <build_depend>euroc_ros_msgs</build_depend>
  <build_depend>message_generation</build_depend>

  <run_depend>std_msgs</run_depend>
  <run_depend>euroc_ros_msgs</run_depend>
  <run_depend>message_runtime</run_depend>

  <export>
  </export>
</package>
